--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 gh-pages/
-build/
+**/build/*
+**/CMakeFiles/*
 
 src/fhe.a
 src/*.o
@@ -24,3 +25,8 @@ src/misc/*.txt
 !src/misc/iotest_asciiLE.txt
 !src/misc/iotest_binBE.bin
 !src/misc/iotest_binLE.bin
+
+# gtags
+GPATH
+GTAGS
+GRTAGS
